--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
     "dropbox": "^10.34.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://artem-ivashchenko.github.io/IVA-file-explorer",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "crypto-browserify": "^3.12.0",
+    "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
     "util": "^0.12.5"
   }
